--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -61,7 +61,7 @@
      }
 
      .card{
-        background-color: lightblue;
+        background-color: #dff7cf;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
